# space-privateers

./: .travis.yml  CREDITS  LICENSE  Makefile  README.md  SpacePrivateers.cabal  changelog  spacepirates.cabal  spaceprivateers.cabal
GameDefinition/: Main.hs  MainMenu.ascii  PLAYING.md  config.ui.default  scores
GameDefinition/Client/UI/Content/: KeyKind.hs
GameDefinition/Content/: ActorKind.hs  CaveKind.hs  FactionKind.hs  ItemKind.hs  ItemKindActor.hs  ItemKindBlast.hs  ItemKindOrgan.hs  ItemKindShrapnel.hs  ModeKind.hs  ModeKindPlayer.hs  PlaceKind.hs  RuleKind.hs  TileKind.hs
