name:                 SpacePrivateers
version:              0.1.3.0
synopsis:             Simple space pirate roguelike
description:          Space Privateers is a roguelike game set in space.
homepage:             https://github.com/tuturto/space-privateers
license:              BSD3
license-file:         LICENSE
author:               Tuukka Turto
maintainer:           tuukka.turto@oktaeder.net
category:             Game
build-type:           Simple
data-files:           GameDefinition/config.ui.default,
                      GameDefinition/scores
extra-source-files:   GameDefinition/PLAYING.md, GameDefinition/MainMenu.ascii,
                      README.md, LICENSE, CREDITS, changelog
cabal-version:        >= 1.10
source-repository head
  type:               git
  location:           git://github.com/tuturto/space-privateers.git

executable SpacePrivateers
  hs-source-dirs:     GameDefinition
  main-is:            Main.hs
  other-modules:      Client.UI.Content.KeyKind,
                      Content.CaveKind,
                      Content.ItemKind,
                      Content.ItemKindActor,
                      Content.ItemKindOrgan,
                      Content.ItemKindBlast,
                      Content.ItemKindTemporary,
                      Content.ModeKind,
                      Content.ModeKindPlayer,
                      Content.PlaceKind,
                      Content.RuleKind,
                      Content.TileKind,
                      TieKnot,
                      Paths_SpacePrivateers

  build-depends:      LambdaHack        >= 0.6.1.0   && < 0.6.2.0,
                      template-haskell  >= 2.6,

                      async             >= 2,
                      base              >= 4         && < 99,
                      containers        >= 0.5.3.0,
                      enummapset-th     >= 0.6.0.0,
                      filepath          >= 1.2.0.1,
                      random            >= 1.1,
                      text              >= 0.11.2.3
                      
  default-language:   Haskell2010

  default-extensions: MonoLocalBinds, ScopedTypeVariables, OverloadedStrings
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   TemplateHaskell
  ghc-options: -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns
  ghc-options: -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  ghc-options: -fwarn-unrecognised-pragmas
  ghc-options: -fno-warn-auto-orphans -fno-warn-implicit-prelude
  ghc-options: -fno-ignore-asserts -funbox-strict-fields
  ghc-options: -threaded -with-rtsopts=-C0.005
