name:                 spacepirates
version:              0.1.0.0
synopsis:             Simple space pirate roguelike
description:          Space Pirates is a roguelike game set in space.
homepage:             https://github.com/tuturto/space-privateers
license:              BSD3
license-file:         LICENSE
author:               Tuukka Turto
maintainer:           tuukka.turto@oktaeder.net
category:             Game
build-type:           Simple
data-files:           GameDefinition/config.ui.default,
                      GameDefinition/scores
extra-source-files:   GameDefinition/PLAYING.md, GameDefinition/MainMenu.ascii,
                      README.md, LICENSE, CREDITS, changelog
cabal-version:        >= 1.10
source-repository head
  type:               git
  location:           git://github.com/tuturto/space-privateers.git

executable spacepirates
  hs-source-dirs:     GameDefinition
  main-is:            Main.hs
  other-modules:      Content.ActorKind,
                      Content.CaveKind,
                      Content.FactionKind,
                      Content.ItemKind,
                      Content.ModeKind,
                      Content.PlaceKind,
                      Content.RuleKind,
                      Content.TileKind,
                      Paths_spacepirates

  build-depends:      base             >=4.7       && <4.8,
                      LambdaHack       >= 0.2.12   && < 0.2.13,
                      enummapset-th    >= 0.6.0.0  && < 1,
                      filepath         >= 1.2.0.1  && < 2,
                      template-haskell >= 2.6      && < 3,
                      text             >= 0.11.2.3 && < 2
  default-language:   Haskell2010

  default-extensions: MonoLocalBinds, ScopedTypeVariables, OverloadedStrings
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   TemplateHaskell
  ghc-options: -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas
  ghc-options: -fno-warn-auto-orphans -fno-warn-implicit-prelude
  ghc-options: -fno-ignore-asserts -funbox-strict-fields
  ghc-options: -threaded -with-rtsopts=-C0.005
